--- a/po/mr_IN.po
+++ b/po/mr_IN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-13 18:56+0100\n"
+"POT-Creation-Date: 2019-04-14 19:26+0100\n"
 "PO-Revision-Date: 2018-03-06 07:42-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Marathi\n"
@@ -53,7 +53,8 @@ msgid "Calculator Plugin"
 msgstr ""
 #
 msgid ""
-"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen\n"
+"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen/Updated by "
+"Mike Rossiter(Rasbats)\n"
 "=======================================\n"
 "\n"
 "This is a light weight yet powerful calculator plugin for OpenCPN. Would you "
@@ -191,9 +192,6 @@ msgstr ""
 msgid "Calculator Preferences"
 msgstr ""
 #
-msgid "Calculator Reporting"
-msgstr ""
-#
 msgid "Calculator preferences"
 msgstr ""
 #
@@ -240,6 +238,9 @@ msgid "Description"
 msgstr ""
 #
 msgid "Design"
+msgstr ""
+#
+msgid "Display Accuracy"
 msgstr ""
 #
 msgid "Distance to horizon"
@@ -296,7 +297,7 @@ msgstr ""
 msgid "Function And Description"
 msgstr ""
 #
-msgid "Function Button in Calculator window"
+msgid "Function Button"
 msgstr ""
 #
 msgid "Function Result Select Units"
@@ -585,6 +586,11 @@ msgstr ""
 msgid "fetch = distance over water that the wind blows"
 msgstr ""
 #
+msgid ""
+"fetch = distance over water that the wind blows\n"
+"U10 - windspeed (10m) must be entered as m/s"
+msgstr ""
+#
 msgid "http://climate.weather.gc.ca/glossary_e.html"
 msgstr ""
 #
@@ -593,7 +599,7 @@ msgid ""
 "prods_servs/normals_documentation_e.html"
 msgstr ""
 #
-msgid "http://lagoon-inside.com/2012/01/faster-thanks-to-the-vmg-concept/"
+msgid "http://lagoon-inside.com/en/faster-thanks-to-the-vmg-concept/"
 msgstr ""
 #
 msgid "http://planetcalc.com/384/"
