--- a/po/pl_PL.po
+++ b/po/pl_PL.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-13 18:56+0100\n"
+"POT-Creation-Date: 2019-04-14 19:26+0100\n"
 "PO-Revision-Date: 2018-03-06 07:42-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Polish\n"
@@ -59,7 +59,8 @@ msgid "Calculator Plugin"
 msgstr "Kalkulator"
 #
 msgid ""
-"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen\n"
+"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen/Updated by "
+"Mike Rossiter(Rasbats)\n"
 "=======================================\n"
 "\n"
 "This is a light weight yet powerful calculator plugin for OpenCPN. Would you "
@@ -197,10 +198,6 @@ msgstr ""
 msgid "Calculator Preferences"
 msgstr "Ustawienia kalkulatora"
 #
-#, fuzzy
-msgid "Calculator Reporting"
-msgstr "Ustawienia kalkulatora"
-#
 msgid "Calculator preferences"
 msgstr "Ustawienia kalkulatora"
 #
@@ -247,6 +244,9 @@ msgid "Description"
 msgstr ""
 #
 msgid "Design"
+msgstr ""
+#
+msgid "Display Accuracy"
 msgstr ""
 #
 msgid "Distance to horizon"
@@ -303,7 +303,7 @@ msgstr ""
 msgid "Function And Description"
 msgstr ""
 #
-msgid "Function Button in Calculator window"
+msgid "Function Button"
 msgstr ""
 #
 msgid "Function Result Select Units"
@@ -594,6 +594,11 @@ msgstr "Kalkulator"
 msgid "fetch = distance over water that the wind blows"
 msgstr ""
 #
+msgid ""
+"fetch = distance over water that the wind blows\n"
+"U10 - windspeed (10m) must be entered as m/s"
+msgstr ""
+#
 msgid "http://climate.weather.gc.ca/glossary_e.html"
 msgstr ""
 #
@@ -602,7 +607,7 @@ msgid ""
 "prods_servs/normals_documentation_e.html"
 msgstr ""
 #
-msgid "http://lagoon-inside.com/2012/01/faster-thanks-to-the-vmg-concept/"
+msgid "http://lagoon-inside.com/en/faster-thanks-to-the-vmg-concept/"
 msgstr ""
 #
 msgid "http://planetcalc.com/384/"
@@ -624,6 +629,12 @@ msgstr ""
 #
 msgid "https://en.wikipedia.org/wiki/Horizon, geometrical model"
 msgstr ""
+#
+#
+#, fuzzy
+#~ msgid "Calculator Reporting"
+#~ msgstr "Ustawienia kalkulatora"
+#
 #
 #
 #
@@ -655,9 +666,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "HideCalculate"
 #~ msgstr "Oblicz"
+#
 #
 #
 #
@@ -675,9 +688,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "ShowCalculate"
 #~ msgstr "Oblicz"
+#
 #
 #
 #
@@ -695,9 +710,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "hidecalculate"
 #~ msgstr "Oblicz"
+#
 #
 #
 #
