--- a/po/sv_SE.po
+++ b/po/sv_SE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-13 18:56+0100\n"
+"POT-Creation-Date: 2019-04-14 19:26+0100\n"
 "PO-Revision-Date: 2018-03-06 07:43-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Swedish\n"
@@ -57,7 +57,8 @@ msgid "Calculator Plugin"
 msgstr "Symbolisk kalkylatormodul"
 #
 msgid ""
-"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen\n"
+"Calculator Plugin for OpenCPN by SaltyPaws aka Walbert Schulpen/Updated by "
+"Mike Rossiter(Rasbats)\n"
 "=======================================\n"
 "\n"
 "This is a light weight yet powerful calculator plugin for OpenCPN. Would you "
@@ -195,10 +196,6 @@ msgstr ""
 msgid "Calculator Preferences"
 msgstr "Kalkylator-inställningar"
 #
-#, fuzzy
-msgid "Calculator Reporting"
-msgstr "Kalkylatorns utdata:"
-#
 msgid "Calculator preferences"
 msgstr "Kalkylatorinställningar"
 #
@@ -245,6 +242,9 @@ msgid "Description"
 msgstr ""
 #
 msgid "Design"
+msgstr ""
+#
+msgid "Display Accuracy"
 msgstr ""
 #
 msgid "Distance to horizon"
@@ -301,7 +301,7 @@ msgstr ""
 msgid "Function And Description"
 msgstr ""
 #
-msgid "Function Button in Calculator window"
+msgid "Function Button"
 msgstr ""
 #
 msgid "Function Result Select Units"
@@ -595,6 +595,11 @@ msgstr "Kalkylatorn"
 msgid "fetch = distance over water that the wind blows"
 msgstr ""
 #
+msgid ""
+"fetch = distance over water that the wind blows\n"
+"U10 - windspeed (10m) must be entered as m/s"
+msgstr ""
+#
 msgid "http://climate.weather.gc.ca/glossary_e.html"
 msgstr ""
 #
@@ -603,7 +608,7 @@ msgid ""
 "prods_servs/normals_documentation_e.html"
 msgstr ""
 #
-msgid "http://lagoon-inside.com/2012/01/faster-thanks-to-the-vmg-concept/"
+msgid "http://lagoon-inside.com/en/faster-thanks-to-the-vmg-concept/"
 msgstr ""
 #
 msgid "http://planetcalc.com/384/"
@@ -647,8 +652,15 @@ msgstr ""
 #
 #
 #
+#
 #~ msgid "Ans"
 #~ msgstr "Ans"
+#
+#
+#, fuzzy
+#~ msgid "Calculator Reporting"
+#~ msgstr "Kalkylatorns utdata:"
+#
 #
 #
 #
@@ -695,8 +707,10 @@ msgstr ""
 #
 #
 #
+#
 #~ msgid "General settings"
 #~ msgstr "Allmänna inställningar"
+#
 #
 #
 #
@@ -714,9 +728,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "HideHelp"
 #~ msgstr "Hjälp"
+#
 #
 #
 #
@@ -734,9 +750,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "ShowHelp"
 #~ msgstr "Hjälp"
+#
 #
 #
 #
@@ -858,9 +876,11 @@ msgstr ""
 #
 #
 #
+#
 #, fuzzy
 #~ msgid "hidecalculate"
 #~ msgstr "Beräkna"
+#
 #
 #
 #
